PA3/cool.output
Terminale, die in Grammatik unbenutzt sind

   ERROR


Zustand 11 Konflikte: 1 Schiebe/Reduziere
Zustand 17 Konflikte: 1 Schiebe/Reduziere
Zustand 85 Konflikte: 9 Schiebe/Reduziere
Zustand 134 Konflikte: 9 Schiebe/Reduziere


Grammatik

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'

    5 class: CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    7 feature_list: /* leer */
    8             | feature ';'
    9             | feature_list feature ';'
   10             | error ';'

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID ':' TYPEID
   13        | OBJECTID ':' TYPEID ASSIGN expr

   14 formal_list: /* leer */
   15            | formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expr_list: /* leer */
   19          | expr
   20          | expr_list ',' expr

   21 expr_list2: expr ';'
   22           | expr_list2 expr ';'
   23           | error ';'

   24 assign: /* leer */
   25       | ASSIGN expr
   26       | error

   27 let: OBJECTID ':' TYPEID assign IN expr
   28    | OBJECTID ':' TYPEID assign ',' let

   29 case_list: OBJECTID ':' TYPEID DARROW expr ';'
   30          | case_list OBJECTID ':' TYPEID DARROW expr ';'

   31 expr: OBJECTID ASSIGN expr
   32     | expr '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | expr '.' OBJECTID '(' expr_list ')'
   34     | OBJECTID '(' expr_list ')'
   35     | IF expr THEN expr ELSE expr FI
   36     | WHILE expr LOOP expr POOL
   37     | '{' expr_list2 '}'
   38     | LET let
   39     | CASE expr OF case_list ESAC
   40     | NEW TYPEID
   41     | ISVOID expr
   42     | expr '+' expr
   43     | expr '-' expr
   44     | expr '*' expr
   45     | expr '/' expr
   46     | '~' expr
   47     | expr '<' expr
   48     | expr LE expr
   49     | expr '=' expr
   50     | NOT expr
   51     | '(' expr ')'
   52     | OBJECTID
   53     | INT_CONST
   54     | STR_CONST
   55     | BOOL_CONST


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
'(' (40) 11 32 33 34 51
')' (41) 11 32 33 34 51
'*' (42) 44
'+' (43) 42
',' (44) 16 20 28
'-' (45) 43
'.' (46) 32 33
'/' (47) 45
':' (58) 11 12 13 17 27 28 29 30
';' (59) 4 5 6 8 9 10 21 22 23 29 30
'<' (60) 47
'=' (61) 49
'@' (64) 32
'{' (123) 5 6 11 37
'}' (125) 5 6 11 37
'~' (126) 46
error (256) 4 10 23 26
CLASS (258) 5 6
ELSE (259) 35
FI (260) 35
IF (261) 35
IN (262) 27
INHERITS (263) 6
LET (264) 38
LOOP (265) 36
POOL (266) 36
THEN (267) 35
WHILE (268) 36
CASE (269) 39
ESAC (270) 39
OF (271) 39
DARROW (272) 29 30
NEW (273) 40
ISVOID (274) 41
STR_CONST (275) 54
INT_CONST (276) 53
BOOL_CONST (277) 55
TYPEID (278) 5 6 11 12 13 17 27 28 29 30 32 40
OBJECTID (279) 11 12 13 17 27 28 29 30 31 32 33 34 52
ASSIGN (280) 13 25 31
NOT (281) 50
LE (282) 48
ERROR (283)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (45)
    auf der linken Seite: 0
program (46)
    auf der linken Seite: 1, auf der rechten Seite: 0
class_list (47)
    auf der linken Seite: 2 3 4, auf der rechten Seite: 1 3
class (48)
    auf der linken Seite: 5 6, auf der rechten Seite: 2 3
feature_list (49)
    auf der linken Seite: 7 8 9 10, auf der rechten Seite: 5 6 9
feature (50)
    auf der linken Seite: 11 12 13, auf der rechten Seite: 8 9
formal_list (51)
    auf der linken Seite: 14 15 16, auf der rechten Seite: 11 16
formal (52)
    auf der linken Seite: 17, auf der rechten Seite: 15 16
expr_list (53)
    auf der linken Seite: 18 19 20, auf der rechten Seite: 20 32 33
    34
expr_list2 (54)
    auf der linken Seite: 21 22 23, auf der rechten Seite: 22 37
assign (55)
    auf der linken Seite: 24 25 26, auf der rechten Seite: 27 28
let (56)
    auf der linken Seite: 27 28, auf der rechten Seite: 28 38
case_list (57)
    auf der linken Seite: 29 30, auf der rechten Seite: 30 39
expr (58)
    auf der linken Seite: 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51 52 53 54 55, auf der rechten Seite: 11 13
    19 20 21 22 25 27 29 30 31 32 33 35 36 39 41 42 43 44 45 46 47
    48 49 50 51


Zustand 0

    0 $accept: . program $end

    error  schiebe und gehe zu Zustand 1 über
    CLASS  schiebe und gehe zu Zustand 2 über

    program     gehe zu Zustand 3 über
    class_list  gehe zu Zustand 4 über
    class       gehe zu Zustand 5 über


Zustand 1

    4 class_list: error . ';'

    ';'  schiebe und gehe zu Zustand 6 über


Zustand 2

    5 class: CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  schiebe und gehe zu Zustand 7 über


Zustand 3

    0 $accept: program . $end

    $end  schiebe und gehe zu Zustand 8 über


Zustand 4

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  schiebe und gehe zu Zustand 2 über

    $default  reduziere mit Regel 1 (program)

    class  gehe zu Zustand 9 über


Zustand 5

    2 class_list: class .

    $default  reduziere mit Regel 2 (class_list)


Zustand 6

    4 class_list: error ';' .

    $default  reduziere mit Regel 4 (class_list)


Zustand 7

    5 class: CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  schiebe und gehe zu Zustand 10 über
    '{'       schiebe und gehe zu Zustand 11 über


Zustand 8

    0 $accept: program $end .

    $default  annehmen


Zustand 9

    3 class_list: class_list class .

    $default  reduziere mit Regel 3 (class_list)


Zustand 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  schiebe und gehe zu Zustand 12 über


Zustand 11

    5 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     schiebe und gehe zu Zustand 13 über
    OBJECTID  schiebe und gehe zu Zustand 14 über

    OBJECTID  [reduziere mit Regel 7 (feature_list)]
    '}'       reduziere mit Regel 7 (feature_list)

    feature_list  gehe zu Zustand 15 über
    feature       gehe zu Zustand 16 über


Zustand 12

    6 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  schiebe und gehe zu Zustand 17 über


Zustand 13

   10 feature_list: error . ';'

    ';'  schiebe und gehe zu Zustand 18 über


Zustand 14

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   12        | OBJECTID . ':' TYPEID
   13        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  schiebe und gehe zu Zustand 19 über
    ':'  schiebe und gehe zu Zustand 20 über


Zustand 15

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    OBJECTID  schiebe und gehe zu Zustand 14 über
    '}'       schiebe und gehe zu Zustand 21 über

    feature  gehe zu Zustand 22 über


Zustand 16

    8 feature_list: feature . ';'

    ';'  schiebe und gehe zu Zustand 23 über


Zustand 17

    6 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     schiebe und gehe zu Zustand 13 über
    OBJECTID  schiebe und gehe zu Zustand 14 über

    OBJECTID  [reduziere mit Regel 7 (feature_list)]
    '}'       reduziere mit Regel 7 (feature_list)

    feature_list  gehe zu Zustand 24 über
    feature       gehe zu Zustand 16 über


Zustand 18

   10 feature_list: error ';' .

    $default  reduziere mit Regel 10 (feature_list)


Zustand 19

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  schiebe und gehe zu Zustand 25 über

    $default  reduziere mit Regel 14 (formal_list)

    formal_list  gehe zu Zustand 26 über
    formal       gehe zu Zustand 27 über


Zustand 20

   12 feature: OBJECTID ':' . TYPEID
   13        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  schiebe und gehe zu Zustand 28 über


Zustand 21

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  schiebe und gehe zu Zustand 29 über


Zustand 22

    9 feature_list: feature_list feature . ';'

    ';'  schiebe und gehe zu Zustand 30 über


Zustand 23

    8 feature_list: feature ';' .

    $default  reduziere mit Regel 8 (feature_list)


Zustand 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature ';'

    OBJECTID  schiebe und gehe zu Zustand 14 über
    '}'       schiebe und gehe zu Zustand 31 über

    feature  gehe zu Zustand 22 über


Zustand 25

   17 formal: OBJECTID . ':' TYPEID

    ':'  schiebe und gehe zu Zustand 32 über


Zustand 26

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   16 formal_list: formal_list . ',' formal

    ')'  schiebe und gehe zu Zustand 33 über
    ','  schiebe und gehe zu Zustand 34 über


Zustand 27

   15 formal_list: formal .

    $default  reduziere mit Regel 15 (formal_list)


Zustand 28

   12 feature: OBJECTID ':' TYPEID .
   13        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  schiebe und gehe zu Zustand 35 über

    $default  reduziere mit Regel 12 (feature)


Zustand 29

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduziere mit Regel 5 (class)


Zustand 30

    9 feature_list: feature_list feature ';' .

    $default  reduziere mit Regel 9 (feature_list)


Zustand 31

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  schiebe und gehe zu Zustand 36 über


Zustand 32

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  schiebe und gehe zu Zustand 37 über


Zustand 33

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  schiebe und gehe zu Zustand 38 über


Zustand 34

   16 formal_list: formal_list ',' . formal

    OBJECTID  schiebe und gehe zu Zustand 25 über

    formal  gehe zu Zustand 39 über


Zustand 35

   13 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 54 über


Zustand 36

    6 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduziere mit Regel 6 (class)


Zustand 37

   17 formal: OBJECTID ':' TYPEID .

    $default  reduziere mit Regel 17 (formal)


Zustand 38

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  schiebe und gehe zu Zustand 55 über


Zustand 39

   16 formal_list: formal_list ',' formal .

    $default  reduziere mit Regel 16 (formal_list)


Zustand 40

   35 expr: IF . expr THEN expr ELSE expr FI

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 56 über


Zustand 41

   38 expr: LET . let

    OBJECTID  schiebe und gehe zu Zustand 57 über

    let  gehe zu Zustand 58 über


Zustand 42

   36 expr: WHILE . expr LOOP expr POOL

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 59 über


Zustand 43

   39 expr: CASE . expr OF case_list ESAC

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 60 über


Zustand 44

   40 expr: NEW . TYPEID

    TYPEID  schiebe und gehe zu Zustand 61 über


Zustand 45

   41 expr: ISVOID . expr

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 62 über


Zustand 46

   54 expr: STR_CONST .

    $default  reduziere mit Regel 54 (expr)


Zustand 47

   53 expr: INT_CONST .

    $default  reduziere mit Regel 53 (expr)


Zustand 48

   55 expr: BOOL_CONST .

    $default  reduziere mit Regel 55 (expr)


Zustand 49

   31 expr: OBJECTID . ASSIGN expr
   34     | OBJECTID . '(' expr_list ')'
   52     | OBJECTID .

    ASSIGN  schiebe und gehe zu Zustand 63 über
    '('     schiebe und gehe zu Zustand 64 über

    $default  reduziere mit Regel 52 (expr)


Zustand 50

   50 expr: NOT . expr

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 65 über


Zustand 51

   46 expr: '~' . expr

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 66 über


Zustand 52

   37 expr: '{' . expr_list2 '}'

    error       schiebe und gehe zu Zustand 67 über
    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr_list2  gehe zu Zustand 68 über
    expr        gehe zu Zustand 69 über


Zustand 53

   51 expr: '(' . expr ')'

    IF          schiebe und gehe zu Zustand 40 über
    LET         schiebe und gehe zu Zustand 41 über
    WHILE       schiebe und gehe zu Zustand 42 über
    CASE        schiebe und gehe zu Zustand 43 über
    NEW         schiebe und gehe zu Zustand 44 über
    ISVOID      schiebe und gehe zu Zustand 45 über
    STR_CONST   schiebe und gehe zu Zustand 46 über
    INT_CONST   schiebe und gehe zu Zustand 47 über
    BOOL_CONST  schiebe und gehe zu Zustand 48 über
    OBJECTID    schiebe und gehe zu Zustand 49 über
    NOT         schiebe und gehe zu Zustand 50 über
    '~'         schiebe und gehe zu Zustand 51 über
    '{'         schiebe und gehe zu Zustand 52 über
    '('         schiebe und gehe zu Zustand 53 über

    expr  gehe zu Zustand 70 über


Zustand 54

   13 feature: OBJECTID ':' TYPEID ASSIGN expr .
   32 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | expr . '.' OBJECTID '(' expr_list ')'
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    LE   schiebe und gehe zu Zustand 71 über
    '<'  schiebe und gehe zu Zustand 72 über
    '='  schiebe und gehe zu Zustand 73 über
    '+'  schiebe und gehe zu Zustand 74 über
    '-'  schiebe und gehe zu Zustand 75 über
    '*'  schiebe und gehe zu Zustand 76 über
    '/'  schiebe und gehe zu Zustand 77 über
    '@'  schiebe und gehe zu Zustand 78 über
    '.'  schiebe und gehe zu Zustand 79 über

    $default  reduziere mit Regel 13 (feature)


Zustand 55

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  schiebe und gehe zu Zustand 80 über


Zustand 56

   32 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | expr . '.' OBJECTID '(' expr_list ')'
   35     | IF expr . THEN expr ELSE expr FI
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr

    THEN  schiebe und gehe zu Zustand 81 über
    LE    schiebe und gehe zu Zustand 71 über
    '<'   schiebe und gehe zu Zustand 72 über
    '='   schiebe und gehe zu Zustand 73 über
    '+'   schiebe und gehe zu Zustand 74 über
    '-'   schiebe und gehe zu Zustand 75 über
    '*'   schiebe und gehe zu Zustand 76 über
    '/'   schiebe und gehe zu Zustand 77 über
    '@'   schiebe und gehe zu Zustand 78 über
    '.'   schiebe und gehe zu Zustand 79 über


Zustand 57

   27 let: OBJECTID . ':' TYPEID assign IN expr
   28    | OBJECTID . ':' TYPEID assign ',' let

    ':'  schiebe und gehe zu Zustand 82 über


Zustand 58

   38 expr: LET let .

    $default  reduziere mit Regel 38 (expr)


Zustand 59

   32 expr: expr . '@' TYPEID '.' OBJECTID '(' expr_list ')'
   33     | expr . '.' OBJECTID '(' expr_list ')'
   36     | WHILE expr . LOOP expr POOL
   42     | expr . '+' expr
   43     | expr . '-' expr
   44     | expr . '*' expr
   45     | expr . '/' expr
   47     | expr . '<' expr
   48     | expr . LE expr
   49     | expr . '=' expr
